orchestratorws/kube/services/orchestratorws-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: orchestratorws
  name: orchestratorws
spec:
  type: LoadBalancer
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5000
  selector:
    service: orchestratorws
status: {}
