orchestratorws/kube/services/custompipeline-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: custompipeline
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/custompipeline: "true"
  podSelector:
    matchLabels:
      io.kompose.network/custompipeline: "true"
